Add Ipynb File [main.ipynb]

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 　　　　　　　　　　　　　　　　　　　　　　　　- 2021.07.04 권도형 -"
+    "#reference : https://www.kaggle.com/vincee/intel-image-classification-cnn-keras"
    ]
   },
   {
